--- a/cursos/hackersDoBem/00fundamentos/m2a1.md
+++ b/cursos/hackersDoBem/00fundamentos/m2a1.md
@@ -27,7 +27,7 @@ Exemplo:
   
 <img width="252" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/44a41997-4aab-4c0f-9d27-a424b5f3fffd">
 
-- Pega todos os restos, de tras para frente: 1101
+- Pega todos os restos de tras para frente: 1101
 - Representar na base 2: (1101)2
 - Verifica na tabela
 
@@ -61,12 +61,89 @@ Exemplo:
 
 <img width="348" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/7d08c168-bb67-4ffe-802b-155d25fd0479">
 
+## Resumo
+
+
+
+<img width="712" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/a8e90b91-c8bd-412e-8540-6834aa66faf5">
+
   
-## Sistema Octal
-> exemplos: erros de jogos, erros de esgotamento de memórias...
+## Sistema Octal e hexadecimal
+
+> Octal: erros de jogos, erros de esgotamento de memórias...
+> hexadecimal: novos numeros de ips
+
+<img width="303" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/688cc0fe-3f21-4945-b6dd-1230bb62f0ca">
+
+<img width="303" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/f88dd4b7-97ce-4713-9e7a-35d5c2f7802c">
 
 
+### Octal
 
-## Sistema hexadecimal
-> exemplos: novos numeros de ips
+- numero octal: 1257
+- Potencia: 8^3 8^2 8^1 8^0 = 512 64 8 1
+- Conta: 1x512 + 2x64 + 5x8 7x1 = 512 + 128 + 40 + 7 = (687)10
+
+
+### Hexadecimal
+
+- numero hexa: 13C2 (C = 12)
+- Potencia: 16^3 16^2 16^1 16^0
+- Conta: 1x4096 3x256 12x6 2X1 = 4096 + 768 + 192 + 2 = (5058)10
+
+### Convertendo decimal para Octal
+
+Exemplo:
+- Número decimal: (177)10
+- Pega o número decimal e divide por 8 repetivamente até não conseguir mais, resultado 0 (é divisao inteira e não por virgula)
+
+  ```js
+  177/8
+  17  22
+  1
+
+  22/8
+  6  2
+
+  2/8
+  2 0  
+  
+  ```
+
+- Pega todos os restos de tras para frente: 261
+- Representar na base 8: (261)8
+
+<img width="200" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/a8687239-b380-45c8-a865-c2de8dbdd12b">
+
+<img width="200" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/bcf3b08c-d142-47f5-916e-f2c3218dc090">
+
+### Convertendo decimal para Hexadecimal
+
+
+Exemplo:
+- Número decimal: (685)10
+- Pega o número decimal e divide por 16 repetivamente até não conseguir mais, resultado 0 (é divisao inteira e não por virgula)
+
+  ```js
+  685/16
+  45  42
+  13
+
+  42/16
+  10 2
+
+  2/16
+  2 0
+  
+  ```
+
+- Pega todos os restos de tras para frente: 2AD (10 é A e 13 é D)
+- Representar na base 8: (2AD)16
+
+  <img width="200" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/84c04600-d12e-47a3-b50b-20ed5161a002">
+
+### Hexadecimal para binário
+
+<img width="300" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/fda83895-9610-42bf-a626-005db2e75c56">
+
 
