--- a/cursos/hackersDoBem/00fundamentos/m2a1.md
+++ b/cursos/hackersDoBem/00fundamentos/m2a1.md
@@ -142,8 +142,47 @@ Exemplo:
 
   <img width="200" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/84c04600-d12e-47a3-b50b-20ed5161a002">
 
-### Hexadecimal para binário
+### Conversão para binário
 
-<img width="300" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/fda83895-9610-42bf-a626-005db2e75c56">
+- Convenção Hex binário: 
 
+<img width="300" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/fda83895-9610-42bf-a626-005db2e75c56">- 
+
+- Convenção de octal para binário:
+
+<img width="300" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/b3051dc4-9865-47b0-bc04-912ac203cf6e">
+
+### Convertendo diretamente octal para binário e binário para octal
+
+- numero (27)8
+- Cada 3 digitos do binário, corresponde a 1 digito do octal <img width="150" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/8cf058ad-0d27-42ca-adbc-5b2a589a9b0a">
+- Eleva a potencia de 2: 4 2 1
+- Quais valores na casa ao somar dará 2? add 1 e as demais 0: 0 1 0
+- Faz a mesma coisa com o valor 7: 4 2 1 = 1 1 1
+- (27)8 = (10111)2
+<img width="300" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/9c95997f-6fcc-4b1c-8fb4-a5f6f51f13c4">
+
+### Convertendo diretamente  binário para octal
+
+- numero (1000101)2
+- Cada 1 digito do octal corresponde a 1 digitos do binário <img width="150" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/06f9c0f5-c69b-4b27-b3d4-bc8a2a130a5d">
+- As casas que tem o numero 1, eu vou somar seus valores (valores elevado a potencia): <img width="150" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/e67a9924-8749-422c-8a1a-03aaa6ab5ee6">
+- (1000101)2 = (105)8
+
+### Convertendo diretamente hexadecimal para binário e binário para hexadecimal
+
+- numero (1B)16
+- Cada 4 digitos do binário, corresponde a 1 digito do hexadecimal 
+- Eleva a potencia de 2: 8 4 2 1
+- Quais valores na casa ao somar dará 1? add 1 e as demais 0: 0 0 0 1
+- Faz a mesma coisa com o valor 11: 8 4 2 1 = 1 0 1 1
+- (1B)16= (11011)2
+<img width="150" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/c8705d00-12c2-45ff-b786-29a3e0f4b7d3">
+
+### Convertendo diretamente binário para hexadecimal
+
+- numero (1011101)2
+- Cada 1 digito do hexadecimal corresponde a 4 digitos do binário <img width="150" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/f1752b33-344e-4540-9735-1797bbd45990">
+- As casas que tem o numero 1, eu vou somar seus valores (valores elevado a potencia): <img width="150" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/099d9ecf-6d2d-4ab6-8754-57187ea4ca55">
+- (1011101)2 = (5D)16
 
