--- a/cursos/hackersDoBem/00fundamentos/m2a2.md
+++ b/cursos/hackersDoBem/00fundamentos/m2a2.md
@@ -1,3 +1,3 @@
-# Aula 2 - CPU, Placa-mãe, Memórias e BIOS/UEFI
+# Anotações: Aula 2 - CPU, Placa-mãe, Memórias e BIOS/UEFI
 
 [Mapa mental](https://coggle.it/diagram/X7WZX25Y5vHflwUO/t/mapa-mental-hardware-do-computador)
