--- a/cursos/hackersDoBem/00fundamentos/m2a2.md
+++ b/cursos/hackersDoBem/00fundamentos/m2a2.md
@@ -1,3 +1,8 @@
 # Anotações: Aula 2 - CPU, Placa-mãe, Memórias e BIOS/UEFI
 
-[Mapa mental](https://coggle.it/diagram/X7WZX25Y5vHflwUO/t/mapa-mental-hardware-do-computador)
+[Mapa mental componentes](https://coggle.it/diagram/X7WZX25Y5vHflwUO/t/mapa-mental-hardware-do-computador)
+
+## O que acontece ao ligar "POWER" do PC?
+
+- [Leitura](https://rishtech.substack.com/p/switching-on-computers)
+- [Mapa mental](https://miro.com/app/board/uXjVNxI_464=/?share_link_id=147310808240)
