--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -1,7 +1,6 @@
-# Parte I
+👾 [Inicio](https://rayanepimentel.github.io/InfoSec-iniciante/) | [Cronograma](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/) | [Bash e Redes](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/bashRedes) [Redes](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/start.html)| [Rede parte I ](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/parte1/menu.html)
 
-1. [Protocolos de rede](#1-protocolos-de-rede)
-2. [Modelo OSI e TCP/IP](./2.modelosOSI.md)
+# Parte I
 
 ## 1. Protocolos de rede
 
@@ -693,3 +692,11 @@ Com HTTPS, você adiciona uma camada de segurança a essa conexão para que ela 
 
 
 ![HTTP e HTTPS](../pics/httpehttps.png)
+
+
+
+<br>
+<hr>
+<br>
+
+[< Anterior](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/parte1/menu.html) | [Próxima >](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/parte1/2.modelosOSI.html)
