--- a/redes/redes-iniciante/parte1/2.modelosOSI.md
+++ b/redes/redes-iniciante/parte1/2.modelosOSI.md
@@ -1,7 +1,6 @@
-# Parte I
+👾 [Inicio](https://rayanepimentel.github.io/InfoSec-iniciante/) | [Cronograma](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/) | [Bash e Redes](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/bashRedes) [Redes](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/start.html)| [Rede parte I ](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/parte1/menu.html)
 
-1. [Protocolos de rede](1.protocolosDeRede.md)
-2. [Modelo OSI e TCP/IP](#2-modelo-osi-e-tcip)
+# Parte I
 
 ## 2. Modelo OSI e TC/IP
 
@@ -81,7 +80,7 @@ Ojetivo: endereçamento lógico, roteamento e controle de trafégo por meio do I
 
 Fonte: [cloudflare](https://www.cloudflare.com/pt-br/learning/ddos/glossary/open-systems-interconnection-model-osi/)
 
-### [Analogia modelo OSI → Enviando e-mail](2.1analogiaOSI.md)
+<!-- ### [Analogia modelo OSI → Enviando e-mail](2.1analogiaOSI.md) -->
 
 ### Tipos de ataques em cada nível do modelo OSI
 
@@ -96,3 +95,9 @@ Fonte: [cloudflare](https://www.cloudflare.com/pt-br/learning/ddos/glossary/open
 ![tipode de ataques](../pics/ataque-modelosOSI-tcp-ip.jpg)
 
 Fonte: [delphimagic](https://delphimagic.blogspot.com/2019/08/tipos-de-ataques-en-cada-nivel-del.html)
+
+<br>
+<hr>
+<br>
+
+[< Anterior](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/parte1/1.protocolosDeRede.html) | [Próxima >](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/parte1/2.1analogiaOSI.html)
