--- a/redes/redes-iniciante/parte1/2.1analogiaOSI.md
+++ b/redes/redes-iniciante/parte1/2.1analogiaOSI.md
@@ -1,3 +1,5 @@
+👾 [Inicio](https://rayanepimentel.github.io/InfoSec-iniciante/) | [Cronograma](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/) | [Bash e Redes](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/bashRedes) [Redes](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/start.html)| [Rede parte I ](https://rayanepimentel.github.io/InfoSec-iniciante/redes/redes-iniciante/parte1/menu.html)
+
 # Analogia modelo OSI → Enviando e-mail
 
 **Cenário**: Gerente de TI enviando e-mail para a chefe de TI.
