--- a/cursos/desenvolvimento-seguro/modelagem-ameaca/01.1-terminalogias.md
+++ b/cursos/desenvolvimento-seguro/modelagem-ameaca/01.1-terminalogias.md
@@ -1,17 +1,11 @@
 👾 [Inicio](https://rayanepimentel.github.io/InfoSec-iniciante/) | [Cronograma](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/) | [Cursos](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/) | [Desenvolvimento Seguro](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/desenvolvimento-seguro/)
 
-# Modelagem de ameaça
 
-Ao aprender uma nova língua, é preciso desenvolver a memória muscular e a consciência de falar essa língua. No início, o pronunciamento não será perfeito, e pode ser frustrante. No entanto, com prática constante, você começa a reconhecer os sons e a gramática, tornando-se mais confiante e fluente. Na modelagem de ameaça acontece a mesma coisa, é necessário "pratica, pratica e pratica" 
-
-
-
-
-## Terminologias
+# Terminologias
 
 ![Alt text](image.png)
 
-### Exemplo de uma exploração de vulnerabilidade.
+## Exemplo de uma exploração de vulnerabilidade.
 
 - Alvo: Empresa XPTO
 
@@ -25,12 +19,12 @@ laravel - 5.4.12
 ```
 Com base nessa informação, ele consultou a "Lista Pública de Vulnerabilidades", o CWE (Common Weakness Enumeration) e buscou por vulnerabilidades específicas do Laravel na versão 5.4.12 ou posteriores.
 
-### CWE
+## CWE
 
 Organizações especializadas, como a Mitre.org e a Nist.gov, mantêm um catálogo de vulnerabilidades encontradas em tecnologias utilizadas globalmente. 
 Para cada vulnerabilidade identificada, ela recebe um identificador único conhecido como CVE (Common Vulnerabilities and Exposures), ou em português, "Vulnerabilidades e Exposições Comuns".
 
-### Ataque
+## Ataque
 
 O atacante descobriu um exploit público para uma vulnerabilidade específica do Laravel 5.4.12 e procedeu com o ataque. O exploit permitiu ao atacante explorar uma falha no sistema e executar ações maliciosas, como ganhar acesso não autorizado ou executar código arbitrário.
 
@@ -39,7 +33,7 @@ O atacante descobriu um exploit público para uma vulnerabilidade específica do
 <img width="1190" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/ac8954f2-1ca2-4dd1-b788-16cfae7744be">
 
 
-### Cenário de Aplicação
+## Cenário de Aplicação
 
 A equipe de design da empresa XPTO apresentou a nova interface para comentários no blog, conforme ilustrado abaixo:
 
@@ -56,7 +50,7 @@ Por exemplo:
 - Campo de "texto" é feito higinização dos dados? 
 
 
-### Resumo
+## Resumo
 
 A modelagem de ameaça é uma estratégia essencial para o desenvolvimento seguro de aplicações, oferecendo uma abordagem proativa para a segurança. Ela permite a identificação e mitigação de riscos desde o início do processo de desenvolvimento, ajudando a evitar problemas de segurança caros e demorados para corrigir. Ao integrar a modelagem de ameaça no ciclo de vida do desenvolvimento, as organizações podem garantir a segurança de seus sistemas e proteger seus ativos digitais contra ameaças 
 
@@ -68,4 +62,4 @@ A modelagem de ameaça é uma estratégia essencial para o desenvolvimento segur
 <hr>
 <br>
 
-[< Anterior](../README.md) | [Próxima >](02-decomposicaoApp.md)
+[< Anterior](00-modelagem.md) | [Próxima >](01-coletar-inform.md)
