--- a/cursos/desenvolvimento-seguro/desenvolvimento-seguro1/1.sql-injection.md
+++ b/cursos/desenvolvimento-seguro/desenvolvimento-seguro1/1.sql-injection.md
@@ -1,4 +1,4 @@
-👾 [Inicio](https://rayanepimentel.github.io/InfoSec-iniciante/) | [Cronograma](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/) | [Cursos](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/) | [Desenvolvimento Seguro](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/desenvolvimento-seguro/) | [Desenvolvimento Seguro - Parte I](./desenvolvimento-seguro1/inicio.md)
+👾 [Inicio](https://rayanepimentel.github.io/InfoSec-iniciante/) | [Cronograma](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/) | [Cursos](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/) | [Desenvolvimento Seguro](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/desenvolvimento-seguro/) | [Desenvolvimento Seguro - Parte I](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/desenvolvimento-seguro/desenvolvimento-seguro1/inicio)
 
 
 # SQL Injection
@@ -57,3 +57,9 @@ User.findOne({ where: { username: { [Sequelize.Op.like]: `%${userInput}%` } } })
 
 Ao usar o operador `Sequelize.Op.like`, garante que o `userInput` seja tratado como um dado simples e não como parte da consulta SQL.
 
+
+<br>
+<hr>
+<br>
+
+[< Anterior](inicio.md) | [Próxima >](03-InsecureRandomness.md)
