--- a/cursos/desenvolvimento-seguro/desenvolvimento-seguro1/1.sql-injection.md
+++ b/cursos/desenvolvimento-seguro/desenvolvimento-seguro1/1.sql-injection.md
@@ -1,4 +1,4 @@
-👾 [Inicio](https://rayanepimentel.github.io/InfoSec-iniciante/) | [Cronograma](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/) | [Cursos](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/) | [Desenvolvimento Seguro](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/desenvolvimento-seguro/) | [Desenvolvimento Seguro - Parte I](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/desenvolvimento-seguro/desenvolvimento-seguro1/inicio)
+👾 [Inicio](https://rayanepimentel.github.io/InfoSec-iniciante/) | [Cronograma](https://rayanepimentel.github.io/InfoSec-iniciante/cronograma/) | [Cursos](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/) | [Desenvolvimento Seguro](https://rayanepimentel.github.io/InfoSec-iniciante/cursos/desenvolvimento-seguro/) | [Desenvolvimento Seguro - Parte I](inicio.md)
 
 
 # SQL Injection
